@@ -1,1 +1,9 @@
 /nbproject/private/
+/music/track1.ogg
+/music/track7.ogg
+/music/track3.ogg
+/music/track4.ogg
+/music/track6.ogg
+/music/track8.ogg
+/music/track2.ogg
+/music/track5.ogg
