@@ -13,6 +13,7 @@
 		<script type="text/javascript" src="js/interface/energy.js"></script>
 		<script type="text/javascript" src="js/interface/minimap.js"></script>
 		<script type="text/javascript" src="js/interface/interface.js"></script>
+		<script type="text/javascript" src="js/interface/music_player.js"></script>
 		<script type="text/javascript" src="js/resources.js"></script>
 		<script type="text/javascript" src="js/player.js"></script>
 		<script type="text/javascript" src="js/map_cell.js"></script>
